--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,8 @@ xcuserdata/
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
-# Pods/
+Pods/
+Podfile.lock
 
 # Carthage
 #
@@ -61,3 +62,11 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+#AppCode IDE
+.idea
+.DS_Store
+IPA/
+upload/
+*.xcuserstate
+*.xcworkspace/
